--- a/stocks.ipynb
+++ b/stocks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "import requests\n",
     "import urllib2\n",
     "from bs4 import BeautifulSoup as BS\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "from __future__ import division"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 236,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 237,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 238,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,99 +119,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 277,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "def getValue(row):\n",
+    "    value=convToFloat(row[5])/10\n",
+    "    return value\n",
+    "\n",
     "def parseBalanceSheet(companyCode):\n",
     "    #balanceSheetURL='https://in.investing.com/equities/'+companyName+'-balance-sheet'\n",
     "    mylist = hitMorningStar('bs',companyCode)\n",
-    "    #print balanceSheetURL\n",
-    "    #Enter balance sheet\n",
-    "    #soup = makeRequest(balanceSheetURL)\n",
-    "    #balanceSheet= soup.find_all(id=\"parentTr\")\n",
     "\n",
-    "    #to parse Total Current assets\n",
-    "    req=balanceSheet[0]\n",
-    "    ca=[]\n",
-    "    for record in req.findAll('td'):\n",
-    "        ca.append(str(record.text))\n",
-    "    currentAssets=ca[2]\n",
-    "    currentAssets=convToFloat(currentAssets)/10 #WHY?\n",
-    "    print(currentAssets)\n",
-    "\n",
-    "\n",
-    "    #to parse Total Total Assets\n",
-    "    req=balanceSheet[1]\n",
-    "    ta=[]\n",
-    "    for record in req.findAll('td'):\n",
-    "        ta.append(str(record.text))\n",
-    "    totalAssets=ta[2]\n",
-    "    totalAssets=convToFloat(totalAssets)/10\n",
-    "    print(totalAssets)\n",
-    "\n",
-    "    #to parse Current Liabilities\n",
-    "    req=balanceSheet[2]\n",
-    "    cl=[]\n",
-    "    for record in req.findAll('td'):\n",
-    "        cl.append(str(record.text))\n",
-    "    currentLiabilities=cl[2]\n",
-    "    currentLiabilities=convToFloat(currentLiabilities)/10\n",
-    "    print(currentLiabilities)\n",
-    "\n",
-    "    #to parse Total Liabilities\n",
-    "    req=balanceSheet[3]\n",
-    "    tl=[]\n",
-    "    for record in req.findAll('td'):\n",
-    "        tl.append(str(record.text))\n",
-    "    totalLiabilities=tl[2]\n",
-    "    if totalLiabilities== \"-\":\n",
-    "        totalLiabilities=\"0\"\n",
-    "    totalLiabilities=float(totalLiabilities)/10\n",
-    "    print(totalLiabilities)\n",
-    "\n",
-    "    #to parse Total Equity\n",
-    "    req=balanceSheet[4]\n",
-    "    te=[]\n",
-    "    for record in req.findAll('td'):\n",
-    "        te.append(str(record.text))\n",
-    "    totalEquity=te[2]\n",
-    "    if totalEquity== \"-\":\n",
-    "        totalEquity=\"0\"\n",
-    "    totalequity=float(totalEquity)/10\n",
-    "    print(totalEquity)\n",
-    "\n",
-    "    #to parse goodwill\n",
-    "    balanceSheet= soup.find_all(class_=\"child\")\n",
-    "    req=balanceSheet[12]\n",
-    "    gw=[]\n",
-    "    for record in req.findAll('td'):\n",
-    "        gw.append(str(record.text))\n",
-    "    goodWill=gw[2]\n",
-    "    if goodWill== \"-\":\n",
-    "        goodWill=\"0\"\n",
-    "    goodWill=float(goodWill)/10\n",
-    "    print(goodWill)\n",
-    "\n",
-    "    #to parse intangibles\n",
-    "    req=balanceSheet[13]\n",
-    "    inta=[]\n",
-    "    for record in req.findAll('td'):\n",
-    "        inta.append(str(record.text))\n",
-    "    intangibles=inta[2]\n",
-    "    if intangibles== \"-\":\n",
-    "        intangibles=\"0\"\n",
-    "    intangibles=float(intangibles)/10\n",
-    "    print(intangibles)\n",
-    "\n",
-    "    return currentAssets, totalAssets, totalLiabilities, totalEquity, goodWill, intangibles"
+    "    currentAssets = totalAssets = currentLiabilities = totalLiabilities = totalEquity = intangibles = 0\n",
+    "    for row in mylist:\n",
+    "        key = row[0]\n",
+    "        if(key=='Total current assets'):\n",
+    "            currentAssets=getValue(row)\n",
+    "        elif(key==\"Total assets\"):\n",
+    "            totalAssets=getValue(row)\n",
+    "        elif(key==\"Total current liabilities\"):\n",
+    "            currentLiabilities=getValue(row)\n",
+    "        elif(key==\"Total liabilities\"):\n",
+    "            totalLiabilities=getValue(row)\n",
+    "        elif(key==\"Total stockholders' equity\"):\n",
+    "            totalEquity=getValue(row)\n",
+    "        elif(key==\"Intangible assets\"):\n",
+    "            intangibles=getValue(row)\n",
+    "        \n",
+    "    print currentAssets, totalAssets, currentLiabilities, totalLiabilities, totalEquity, intangibles\n",
+    "    return currentAssets, totalAssets, currentLiabilities, totalLiabilities, totalEquity, intangibles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 299,
    "metadata": {
     "scrolled": true
    },
@@ -219,18 +164,8 @@
     "def writeCSVRow(companyName, companyCode):\n",
     "    mylist = hitMorningStar('keyRatio',companyCode)\n",
     "    currentDetails, ltp, scrip, industry, marketcap = getCurrentDetails(companyName)\n",
-    "    currentAssets, totalAssets, totalLiabilities, totalEquity, goodWill, intangibles = parseBalanceSheet(companyName)\n",
+    "    currentAssets, totalAssets, currentLiabilities, totalLiabilities, totalEquity, intangibles = parseBalanceSheet(companyCode)\n",
     "    \n",
-    "\n",
-    "    #print(balsh[12])\n",
-    "    #value1= soup.find_all('span')\n",
-    "    #print(value1)\n",
-    "    #a=value1[0].index(\"Total Common Shares Outstanding\")\n",
-    "    #print(mylist)\n",
-    "\n",
-    "    #a is dummy variable\n",
-    "    a=mylist[2][0]\n",
-    "\n",
     "    nshares=(convToFloat(mylist[11][10]))/10\n",
     "    #print(nshares)\n",
     "\n",
@@ -238,7 +173,10 @@
     "    #print(eps)\n",
     "\n",
     "    pe=ltp/eps\n",
-    "    cacl=currentAssets/currentLiabilities\n",
+    "    if(currentLiabilities!=0):\n",
+    "        cacl=currentAssets/currentLiabilities\n",
+    "    else:\n",
+    "        cacl=0\n",
     "    ca=1.1*currentAssets\n",
     "    nta=totalAssets-goodWill-intangibles\n",
     "    ntas=nta/nshares\n",
@@ -290,95 +228,58 @@
     "    FVofDividend = np.fv(defInterestRate/100.0,10,-1*d17,-1*d17,0)\n",
     "    FVofBV = np.fv(bvchange/100.0,10,0,-1*b17)\n",
     "    Total = FVofDividend + FVofBV\n",
-    "    IntrinsicValue = np.pv(defInterestRate/100.0,10,0,Total,0)\n",
-    "    PercentageIncrease = 100*(IntrinsicValue - ltp)/ltp\n",
+    "    IntrinsicValue = np.pv(defInterestRate/100.0,10,0,-1*Total,0)\n",
+    "    PercentageIncrease = 100*(ltp - IntrinsicValue)/IntrinsicValue\n",
     "    #print(nshares)\n",
-    "    nlist=[[scrip,industry,nshares,marketcap,ltp,eps,pe,totalAssets,currentAssets,currentLiabilities,cacl,totalLiabilities,ca,goodWill,intangibles,nta,ntas,pnta,ltde,roe1,roe2,roe3,roe4,roe5,roe5ya,ni5y,rg10y,eps10y,d8,d9,d10,d11,d12,d13,d14,d15,d16,d17,b8,b9,b10,b11,b12,b13,b14,b15,b16,b17,bvchange,    FVofDividend, FVofBV, Total, IntrinsicValue, PercentageIncrease]]\n",
+    "    nlist=[[scrip,industry,nshares,marketcap,ltp, IntrinsicValue, PercentageIncrease, eps,pe,totalAssets,currentAssets,currentLiabilities,cacl,totalLiabilities,ca,goodWill,intangibles,nta,ntas,pnta,ltde,roe1,roe2,roe3,roe4,roe5,roe5ya,ni5y,rg10y,eps10y,d8,d9,d10,d11,d12,d13,d14,d15,d16,d17,b8,b9,b10,b11,b12,b13,b14,b15,b16,b17,bvchange,    FVofDividend, FVofBV, Total, ltp, IntrinsicValue, PercentageIncrease]]\n",
     "    #print(nlist)\n",
     "    #all data will be put into this csv file. This file is overwritten every time you run the code.\n",
+    "    print 'Started writing to csv'\n",
     "    my_new_list = open('stock.csv', 'a')\n",
     "    csv_writer = csv.writer(my_new_list)\n",
     "    csv_writer.writerows(nlist)\n",
-    "    my_new_list.close()"
+    "    my_new_list.close()\n",
+    "    print 'Finished writing'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 306,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "companyCode = \"ALLCARGO\"\n",
-    "companyName = \"allcargo-logistics\""
+    "companyCode = \"SUNPHARMA\"\n",
+    "companyName = \"sun-pharma-advanced-research\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('ltp - ', 189.8)\n",
-      "Allcargo Logistics Ltd (ACLL)\t\n",
+      "('ltp - ', 551.2)\n",
+      "Sun Pharmaceutical Industries Ltd. (SUN)\t\n",
       "\n",
-      "IndustryBusiness Services\n",
-      "SectorServices\n",
-      "Employees4423\n",
+      "IndustryBiotechnology & Drugs\n",
+      "SectorHealthcare\n",
+      "Employees17516\n",
       "Equity TypeORD\n",
       "\n",
-      "46.63B\n",
-      "https://in.investing.com/equities/allcargo-logistics-balance-sheet\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0\n",
-      "0.0\n",
-      "0.0\n"
+      "1,322.5B\n",
+      "32953.6 61410.2 17887.0 24770.6 36639.7 10416.5\n",
+      "Started writing to csv\n",
+      "Finished writing\n"
      ]
     }
    ],
    "source": [
     "writeCSVRow(companyName, companyCode)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://in.investing.com/equities/reliance-industries-balance-sheet\n",
-      "161804.0\n",
-      "752024.0\n",
-      "277636.0\n",
-      "475715.0\n",
-      "2763090\n",
-      "4639.0\n",
-      "103305.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(161804.0, 752024.0, 475715.0, '2763090', 4639.0, 103305.0)"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parseBalanceSheet(\"reliance-industries\")"
    ]
   },
   {
